# aer-prealpha2

./: .gitignore  CMakeLists.txt  Makefile
lib/core/: CMakeLists.txt  fraction.cc  fraction.hh  platform.cc  platform.hh  sources.cmake
lib/game/: chart.cc  chart.hh
lib/model/: CMakeLists.txt  chart.cc  chart.hh  sources.cmake
lib/runtime/: CMakeLists.txt  _utils.cc  _utils.hh  input.cc  input.hh  input_factory.cc  input_factory.hh  input_fallback.cc  input_fallback.hh  input_x11.cc  input_x11.hh  key.hh  sources.cmake
scripts/: glob_sources.py
src/: CMakeLists.txt  main.cc  sources.cmake
